cart number updates when you add to cart, next is create cart list

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "start": "npm run dev",
-    "type" : "tsc --watch"
+    "type": "tsc --watch"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
